<resources>
    <string name="app_name">IoTDomo</string>
    <string name="access_not_allowed">Access not allowed.</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_phone_link">Link</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_lock">Smart Lock</string>
    <string name="lbl_name1">Teresa Aranibar</string>
    <string name="lbl_name2">Natalia Camacho</string>
    <string name="msg_help">Help</string>
    <string name="lbl_serie">Series Fibonacci</string>
    <string name="bt_save">Save next number</string>
    <string name="hint_input_number">Number</string>
    <string name="lbl_name_person">Name please.</string>
    <string name="lbl_game">Game</string>
    <string name="lbl_image">Image</string>
    <string name="lbl_pattern">Pattern</string>
    <string name="lbl_patter_lock">Pattern Lock</string>
    <string name="select_photo">Select a photo</string>
    <string name="dialog_select_prompt">Define permission</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="lbl_detect_face">Detect Face</string>
    <string name="value_null">Cannot transform a null value</string>
    <string name="lbl_photo">Capture and training of face</string>
    <string name="lbl_pattern_lock">Draw pattern lock</string>
    <string name="lbl_pattern_exist">Exists</string>
    <string name="lbl_pattern_not_exist">Not exists</string>
    <string name="lbl_pattern_draw">Draw</string>
    <string name="lbl_pattern_confirm">Confirm Pattern</string>
    <string name="lbl_pattern_wrong">Wrong</string>
    <string name="lbl_pattern_valid">Valid</string>
    <string name="lbl_clear">Cancel</string>
    <string name="lbl_repeat">Repeat</string>
    <string name="lbl_draw">Draw</string>
    <string name="lbl_continue">Confirm</string>
    <string name="lbl_training_face">Training Face</string>
    <string name="lbl_test_face">Test Face</string>
    <string name="lbl_configuration">Configuration</string>
    <string name="lbl_wrong_pattern">Wrong Pattern</string>
    <string name="lbl_size_pattern">Length Small</string>
    <string name="lbl_options_register">You register for pattern or face recognition.</string>
</resources>
