<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_guideline"
        app:layout_constraintGuide_percent=".05"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/left_center_guideline"
        app:layout_constraintGuide_percent=".45"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_center_guideline"
        app:layout_constraintGuide_percent=".55"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_guideline"
        app:layout_constraintGuide_percent=".95"
        android:orientation="vertical"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_guideline"
        app:layout_constraintGuide_percent=".05"
        android:orientation="horizontal"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_guideline"
        app:layout_constraintGuide_percent=".95"
        android:orientation="horizontal"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline"
            android:textAlignment="center"
            android:text="@string/lbl_pattern_lock"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <com.andrognito.patternlockview.PatternLockView
            android:id="@+id/pl_access"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:layout_marginTop="20dp"
            app:aspectRatio="square"
            app:aspectRatioEnabled="true"
            app:dotAnimationDuration="150"
            app:dotCount="3"
            app:dotNormalSize="12dp"
            app:dotSelectedSize="24dp"
            app:pathWidth="4dp"
            app:normalStateColor="@color/white"
            app:correctStateColor="@color/colorPrimary"
            app:pathEndAnimationDuration="100"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/bt_clear"
            android:text="@string/lbl_clear"
            android:background="@drawable/rounded_button"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/left_center_guideline"
            app:layout_constraintTop_toBottomOf="@+id/pl_access"/>

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/right_center_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/pl_access"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@string/lbl_pattern_exist"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>
